--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -77,18 +77,26 @@
         android:order="-140"
         settings:controller="com.android.settings.notification.NotificationVolumePreferenceController"/>
 
+    <!-- Link ringtone and notification volumes -->
+    <com.msm.xtended.preferences.SecureSettingSwitchPreference
+        android:key="volume_link_notification"
+        android:title="@string/volume_link_notification_title"
+        android:defaultValue="true"
+        android:order="-139"
+        settings:controller="com.android.settings.notification.LinkedVolumesPreferenceController"/>
+
     <com.msm.xtended.preferences.SystemSettingSwitchPreference
         android:key="incall_notifications_vibrate"
         android:title="@string/incall_notifications_vibrate"
         android:summary="@string/incall_notifications_vibrate_summary"
-        android:order="-139"
+        android:order="-138"
         android:defaultValue="false" />
 
     <!-- Increasing ring -->
     <com.msm.xtended.preferences.SystemSettingSwitchPreference
         android:key="increasing_ring"
         android:title="@string/increasing_ring_volume_option_title"
-        android:order="-138"
+        android:order="-135"
         settings:controller="com.android.settings.notification.IncreasingRingPreferenceController"
         android:defaultValue="false" />
 
@@ -97,7 +105,7 @@
         android:key="increasing_ring_volume"
         android:icon="@drawable/ring_notif_increasing"
         android:dependency="increasing_ring"
-        android:order="-135"
+        android:order="-134"
         settings:controller="com.android.settings.notification.IncreasingRingVolumePreferenceController" />
 
     <!-- Also vibrate for calls -->
